--- a/APItester/index.html
+++ b/APItester/index.html
@@ -7,7 +7,14 @@
 <body>
 <script>
 
-	user_token = "erhghjegrhjgerg8374ut8734th34t"
+	var text = "";
+    var possible = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+
+    for( var i=0; i < 35; i++ )
+        text += possible.charAt(Math.floor(Math.random() * possible.length));
+
+
+	user_token = text;
 	localStorage.setItem('user_token', user_token);
 	
 	url = "http://www.api.lvh.me:3001/authenticate?callback=http://127.0.0.1:8080/apitester/test.html&user_token=" + user_token;
