--- a/RestaurantManager/index.html
+++ b/RestaurantManager/index.html
@@ -11,6 +11,8 @@
 
         <script src="scripts/vendor/angular.js"></script>
         <script src="scripts/vendor/angular-route.js"></script>
+        <script src="scripts/vendor/angular-resource.js"></script>
+
         <script type="text/javascript" src="dist/app.js"></script>
 
     </body>
