--- a/RestaurantManager/index.html
+++ b/RestaurantManager/index.html
@@ -20,6 +20,7 @@
         <script src="scripts/vendor/angular-resource.js"></script>
         <script src="scripts/vendor/angular-animate.js"></script>
         <script src="scripts/vendor/angular-route-segment.min.js"></script>
+        <script src="scripts/vendor/ui-bootstrap-tpls.js"></script>
 
 
         <script src='scripts/vendor/lodash.min.js'></script>
