--- a/RestaurantManager/index.html
+++ b/RestaurantManager/index.html
@@ -8,11 +8,29 @@
         <link rel="stylesheet" href="stylesheet/app.css" />
     </head>
     <body>
-        <div class="container-fluid" data-ng-controller="LoginCtrl">
-            <div login-menu login="login()" logout="logout()"></div>
-            <div id="contents" app-view-segment="0"></div>
+        <div class="fullscreen" data-ng-controller="LoginCtrl">
+            <nav class="navbar navbar-inverse navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="#">Restaurant finder</a>
+                    </div>
+                    <div id="navbar" class="navbar-collapse collapse">
+                        <div class="navbar-right">
+                            <div login-menu login="login()" logout="logout()"></div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <div class="container-fluid">
+                <div id="contents" app-view-segment="0"></div>
+            </div>
         </div>
-
              
 
         <script src="scripts/vendor/angular.js"></script>
